[gd_scene load_steps=4 format=3 uid="uid://b1rm26e4amecn"]

[ext_resource type="PackedScene" uid="uid://c0rgxxnkrca5y" path="res://scenes/field_objects/area_gate/area_gate.tscn" id="1_7axgg"]
[ext_resource type="Script" path="res://scenes/field_objects/one_way_gate/one_way_gate.gd" id="1_dwvis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fio27"]
size = Vector2(12, 16)

[node name="OneWayGate" type="Node2D"]
process_mode = 3
script = ExtResource("1_dwvis")

[node name="AreaGate" parent="." instance=ExtResource("1_7axgg")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6, 16)
shape = SubResource("RectangleShape2D_fio27")

[node name="ExitMarker" type="Marker2D" parent="."]
position = Vector2(25, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
